# agriflow

./: Dockerfile  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: backend-deploy.yml  hf_deploy.yml
Data/: SUMBER_DATA.md  ai_training_data.csv  blockchain_ledger_sample.json  commodity_data.csv  env.local.example  modul10_early_warning.json  modul2_ai_matchmaking_buyers.json  price_history_padi_ir64.csv  supply_map.geojson
agriflow-backend/: Dockerfile  agriflow_commodity.db  agriflow_user.db  docker-compose.yml  main.py  requirements.txt
agriflow-backend/infrastructure/: timescale_setup.sql
agriflow-backend/services/ai-service/: credit_scorer.py  main.py  price_predictor.py
agriflow-backend/services/ai_service/: credit_scorer.py  main.py  price_predictor.py  quality_detector.py
agriflow-backend/services/blockchain-service/: main.py
agriflow-backend/services/blockchain_service/: main.py
agriflow-backend/services/commodity-service/: main.py  models.py  schemas.py  seeder.py
agriflow-backend/services/commodity_service/: database.py  main.py  models.py  requirements.txt  schemas.py
agriflow-backend/services/insurance-service/: main.py
agriflow-backend/services/insurance_service/: main.py
agriflow-backend/services/matching_service/: main.py
agriflow-mobile/: app.json  index.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
agriflow-web/: README.md  package-lock.json  package.json
agriflow-web/scratch/: view_stitch.html
agriflow-web/src/: middleware.ts
design_system/: tokens.json
(+63 files in other folders)
